# CPP-Project

./: CMakeLists.txt  README.md
include/: Corpus.h  Dictionary.h  Gui.h  LSTModel.h  RNNLm.h
src/: .Gui.cpp.swp  .LSTModel.cpp.swp  Corpus.cpp  Dictionary.cpp  Gui.cpp  LSTModel.cpp  Main.cpp  RNNLm.cpp
